--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -3,13 +3,11 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	margin-top: 2em;
+	margin-top: auto;
 	background-color: black;
+	flex-shrink: 0;
+	width: 100%;
 	min-height: 9em;
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	left: 0;
 }
 
 .footer img {
