--- a/src/style/About/AboutHeroBanner.css
+++ b/src/style/About/AboutHeroBanner.css
@@ -1,7 +1,7 @@
 .top-banner-section {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 350px;
+	grid-template-rows: 30vh;
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
 	align-content: center;
@@ -20,7 +20,6 @@
 	display: grid;
 	min-width: 21.875em;
 	width: 100%;
-	height: 100%;
 	object-fit: cover;
 	border-radius: 1.563em;
 }
