--- a/src/style/Home/MainHome.css
+++ b/src/style/Home/MainHome.css
@@ -5,5 +5,8 @@
 	border-radius: 1.563em;
 	max-width: 80vw;
 	margin: auto;
+	grid-gap: 0.584vw;
+	row-gap: 1.5vw;
 	margin-top: 1.5em;
+	margin-bottom: 1.5em;
 }
