tags and description added on rentalPage

--- a/src/style/Rental/MainRental.css
+++ b/src/style/Rental/MainRental.css
@@ -29,8 +29,14 @@
 	text-align: end;
 	margin: auto;
 }
+
 .rentalOwnerPicture {
 	object-fit: cover;
 	height: 100%;
 	border-radius: 100%;
+}
+
+.rentalDescriptionsContainer {
+	display: flex;
+	justify-content: space-between;
 }
