--- a/src/style/Rental/MainRental.css
+++ b/src/style/Rental/MainRental.css
@@ -40,3 +40,10 @@
 	display: flex;
 	justify-content: space-between;
 }
+
+.rentalDetailsContainer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0.5em 0;
+}
