--- a/src/style/DropDownMenu.css
+++ b/src/style/DropDownMenu.css
@@ -4,6 +4,14 @@
 	display: inline-block;
 }
 
+.big {
+	width: 60vw;
+}
+
+.small {
+	width: 35vw;
+}
+
 .DropDownMenuOpen {
 	background-color: #f6f6f6;
 }
@@ -22,12 +30,36 @@
 
 .DropDownMenu_title h3 {
 	font-weight: 500;
+	font-size: 1.5em;
 }
 
 .DropDownMenu_text {
+	font-size: 1.5em;
 	padding: 1em 2em 1em 2em;
 }
 
 .DropDownMenu_list {
+	font-size: 1.5em;
 	padding: 1em 2em 1em 2em;
+}
+
+@media (max-width: 1024px) {
+	.big {
+		width: 80vw;
+	}
+	.small {
+		width: 80vw;
+	}
+
+	.DropDownMenu_title h3 {
+		font-size: 0.813em;
+	}
+
+	.DropDownMenu_text {
+		font-size: 0.75em;
+	}
+
+	.DropDownMenu_list {
+		font-size: 0.75em;
+	}
 }
