--- a/src/style/Error404/Error404.css
+++ b/src/style/Error404/Error404.css
@@ -1,6 +1,7 @@
 .error404 {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
 	color: #ff6060;
 	margin: 3em 0;
@@ -20,4 +21,21 @@
 	padding-top: 7em;
 	font-size: 1.125em;
 	text-decoration: underline;
+}
+@media (max-width: 1024px) {
+	.error404 {
+		min-height: 60vh;
+	}
+
+	.error404 h1 {
+		font-size: 6em;
+	}
+	.error404_message {
+		padding: 0 1em;
+		font-size: 1.125em;
+		text-align: center;
+	}
+	.homepage_link {
+		font-size: 0.875em;
+	}
 }
