--- a/src/style/Home/MainHome.css
+++ b/src/style/Home/MainHome.css
@@ -13,3 +13,11 @@
 	padding-top: 1.5em;
 	padding-bottom: 1.5em;
 }
+
+@media (max-width: 1042px) {
+	.mainHome {
+		margin-top: 0em;
+		margin-bottom: 0em;
+		background-color: white;
+	}
+}
